Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages.

Changelog for smp_utils-0.99 [20110309] [svn:r58]
  - remove doc/smp_utils.html , refer readers to web page
  - smp_discover_list: SAS-2 fix, add --summary option
  - smp_rep_exp_route_tbl: SAS-2 fix
  - smp_rep_general: SAS-2 fix, add --zero option
  - smp_discover, smp_rep_phy_err_log, smp_rep_phy_sata:
    add --zero options
  - smp_conf_general: correct request

Changelog for smp_utils-0.95 [20101116] [svn:r47]
  - place link to smp_utils.html examples in man pages
  - alter Makefile for non-root users
  - add spl-r04 discover changes (spl is upper layers of sas-2.1)
  - mpt: cope with mpt2 ioctl that uses a different magic number

Changelog for smp_utils-0.94 [20081229] [svn:r40]
  - smp_discover: sync to sas2r15
  - smp_discover_list: sync to sas2r15
  - smp_rep_general: sync to sas2r15
  - smp_rep_exp_route_tbl: sync to sas2r15
  - smp_lib: sync to sas2r15
  - sgv4: more detail in error messages
  - sgv4: drop scsi.h include, gives problems with lk 2.6.27
  - mpt: allow either /dev/mptctl or /dev/mpt2ctl [10;220-221]
    - warn if target SAS address is 0x00000000 when -v given

Changelog for smp_utils-0.93 [20080106] [svn:r7]
  - sgv4: add new interface
  - smp_phy_control: sync with sas2r10
  - smp_rep_phy_sata: affiliation contexts, added sas2r08
  - smp_discover: add '--list' option for attribute=value output
  - smp_rep_general: sync with sas2r09..12
  - smp_discover, smp_discover_list: sync with sas2r09..12
    - warn if expander's SAS address is different from requested
  - add smp_rep_exp_route_tbl utility
  - abridge output from responses when prior to SAS-2
  - rename this file from CHANGELOG to ChangeLog
  - place code in subversion repository
  - move smp_lib.h into include directory
  - move man pages into doc directory
    - add 'conforms to' section
  - fix FreeBSD build
